<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/ic_dialog_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_dialog"
        style="@style/text_janken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_result"
        android:textColor="@color/purple"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_game_result"
        style="@style/text_janken"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/title_result"
        android:textColor="@color/purple_dark"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_dialog" />

    <Button
        android:id="@+id/btn_play"
        style="@style/dialog_button"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green_light"
        android:text="@string/play_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_result" />

    <Button
        android:id="@+id/btn_menu"
        style="@style/dialog_button"
        android:backgroundTint="@color/purple_light"
        android:text="@string/back_to_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />

</androidx.constraintlayout.widget.ConstraintLayout>